--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -10,12 +10,32 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form id="createForm" asp-action="Create" onsubmit="return formValidation('createForm')">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
-                <span asp-validation-for="FullName" class="text-danger"></span>
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" style="text-transform:capitalize;" class="form-control" />
+                <span id="FirstNameVal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MiddleName" class="control-label"></label>
+                <input asp-for="MiddleName" style="text-transform:capitalize;" class="form-control" />
+                <span id="MiddleNameVal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" style="text-transform:capitalize;" class="form-control" />
+                <span id="LastNameVal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" style="text-transform:lowercase;" class="form-control" />
+                <span id="EmailVal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" type="number" class="form-control" />
+                <span id="PhoneNumberVal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -28,3 +48,7 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+    function formValidation() {
+    }
+</script>
