--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,59 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is a simple app to store information about students and the course they study.</p>
+    <br />
+    <br />
+    <h2 class="text-center">About</h2>
+    <p id="about" class="height-limited text-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dicta ullam quaerat veritatis ad dolorem distinctio in ab et officiis repellat, dolor itaque iste. Officia perferendis harum nulla deleniti pariatur?
+Distinctio consectetur provident ab molestias? Ipsum, nisi! Harum perspiciatis cupiditate tempore enim necessitatibus aperiam debitis quisquam architecto, dignissimos sint soluta mollitia eligendi accusamus perferendis dolorum delectus magnam dolorem, ducimus error.
+Perferendis asperiores blanditiis non saepe velit delectus adipisci autem tempore sed dolores voluptatibus veniam molestias, id modi illum laudantium! Recusandae at non eos similique neque delectus quasi dolorem dolore qui.
+Quibusdam officiis, itaque velit amet molestiae architecto non veniam deserunt ullam vero dolore quos voluptatum molestias impedit aliquam necessitatibus. Eum voluptatibus maxime nesciunt consequatur voluptas officiis porro dolorem, ullam a.
+Recusandae commodi adipisci qui, quae error nobis odit, iste ipsam nulla reprehenderit ab illo quam asperiores? Laudantium vel eos sed atque ducimus, ipsam modi vero quia quod minus tenetur delectus.
+Distinctio nisi maxime excepturi molestias ratione iste quos minima recusandae, quod ut temporibus maiores sunt itaque cum cupiditate. Qui itaque facilis repellendus nobis minima praesentium perferendis vel natus aliquid. Fugit!
+Minima consequuntur possimus nemo necessitatibus ea aut quae voluptates, nam voluptas at accusantium quaerat minus corporis. Quisquam nulla iure necessitatibus cum veritatis sed temporibus sequi, natus qui quibusdam, ad unde.
+Nostrum blanditiis laudantium perferendis nobis reiciendis architecto reprehenderit alias autem deserunt a? Architecto assumenda nam quae at obcaecati? Corrupti odio ipsa ut dolores nostrum enim possimus exercitationem deleniti quisquam illo!
+Voluptatibus totam assumenda ab asperiores, est esse officia doloremque sunt et laudantium pariatur quos maxime aspernatur? Culpa, non maiores et aut quod repellat totam unde, nesciunt harum tempore, blanditiis omnis?
+Quibusdam nam animi quas repudiandae maxime fugiat! Porro magni possimus iusto suscipit harum a cumque ad molestiae quaerat obcaecati. Obcaecati cumque quibusdam repellat delectus ducimus dolores facilis blanditiis porro aliquid.
+Labore, quaerat eveniet itaque fugiat dolor excepturi eos voluptate modi nulla minima. Inventore unde doloremque, quibusdam dicta eum impedit nihil illo, sequi accusamus aperiam doloribus beatae minima veritatis qui. Laudantium?
+Delectus quam dolores possimus sed illo repellat eum rem quaerat at, magni velit nihil nulla laudantium ad ducimus, autem optio corporis quisquam vitae omnis architecto reprehenderit? Excepturi praesentium veniam maiores?
+Veniam ut cumque soluta id repellat sint neque incidunt placeat, autem laborum nobis, error accusamus? Laboriosam culpa officia assumenda aliquid nihil temporibus fuga laudantium, error repellat impedit quis, voluptatem sit!
+Beatae porro odio officia libero cumque quia numquam accusamus, perferendis, accusantium atque praesentium sint enim repudiandae autem tempora. Ducimus et explicabo exercitationem architecto minus? Nostrum nihil a nobis itaque natus.
+Mollitia, provident esse incidunt quia itaque pariatur nisi quas consectetur ullam alias est et, ipsam velit saepe recusandae, corporis modi distinctio. Labore dolore neque, mollitia ullam debitis perferendis tempore fugiat?
+Modi expedita autem omnis a repellat laborum, obcaecati quidem non adipisci perferendis facilis at voluptatum, dolore fuga? Beatae suscipit totam corrupti pariatur aliquam temporibus, labore, ullam, quisquam animi quis quae?
+Iure explicabo architecto voluptatum consequatur corporis pariatur quod, possimus quam delectus libero iusto reprehenderit assumenda maiores iste, provident tempore dolor aliquam aliquid repellendus quibusdam esse suscipit magni temporibus? Adipisci, assumenda!
+Commodi consequatur sit nostrum repellat asperiores, fugit nam. Quod optio reiciendis ipsam porro fugit aut quibusdam, nobis aliquam iure illum repellat eveniet dolor, velit tenetur aliquid est soluta esse! Illo!
+Doloremque, ullam pariatur! Alias est voluptatibus commodi ipsum, illo, nostrum nam a maiores soluta eaque aliquam accusamus? Doloremque dolores perspiciatis est magni. Quibusdam ut veniam neque similique fuga laboriosam quis.
+Eos vel deleniti nobis perferendis incidunt praesentium iusto at. Beatae maiores dignissimos esse labore voluptate, illo, aut quisquam recusandae iusto temporibus, eveniet corporis velit quia facilis sequi mollitia itaque eius.
+In, quibusdam non ab atque voluptatem cupiditate asperiores nobis! Laudantium, quaerat! Dolore, id, inventore quidem laborum suscipit excepturi nihil, minus fugit adipisci consequuntur culpa alias rem eius. Eveniet, quo quam.
+Vero nostrum fugit nam possimus dolores, optio consectetur, blanditiis doloremque veniam culpa sit. Explicabo, illum neque eveniet ratione aspernatur deserunt tempore non nobis! Ducimus accusamus, asperiores dolores itaque inventore at?
+Repellat, doloremque! Fugiat officia at eaque voluptatem velit ex dolores quam nihil provident doloribus quod, fugit debitis quisquam itaque consequatur non laboriosam soluta autem ab, odit pariatur, numquam laudantium a.
+Minima asperiores consectetur inventore? Praesentium quas pariatur dignissimos, distinctio iste eius temporibus autem dicta! Ipsum fugiat ut optio repellendus consectetur aspernatur, impedit, recusandae veniam dicta esse, dolorem repudiandae tempora. Qui!
+Consectetur rem quis reprehenderit reiciendis, tenetur ipsum eos aliquam, numquam eaque facilis velit, ut nobis. Quasi quia consequuntur est fuga aperiam deserunt culpa modi ex? Accusamus sequi hic sapiente labore!
+Ipsam veniam quibusdam vero autem minima ab nobis eveniet omnis fuga error, quaerat inventore aliquam veritatis, voluptates, tenetur eius nesciunt enim quo? Blanditiis beatae hic maiores optio nihil, explicabo non!
+Voluptatem molestiae nostrum reiciendis aliquid deserunt maxime saepe assumenda itaque facere sint. Commodi adipisci natus, facilis eveniet dicta ullam eaque dolorum fugit ipsum ducimus, minus maiores. Pariatur quis delectus sit?
+Impedit mollitia, et tempora harum eaque earum commodi ullam ducimus inventore illum doloribus eos sunt expedita voluptates voluptatem sit aliquid. Consectetur quae nemo placeat eveniet, iste distinctio voluptatem nostrum debitis!
+Velit enim modi quidem sint provident nostrum, architecto dolores culpa fugiat doloremque vitae non perferendis vero, nulla voluptatum? Tempore expedita culpa ullam dignissimos molestias illo nesciunt quo recusandae veritatis error.
+Debitis eum dolores culpa maiores magni dolorum quia alias, blanditiis soluta, distinctio suscipit totam officiis quis quod? Atque, eum aliquam? Iusto, aliquam voluptatum? Doloremque dolores veritatis minima, voluptates earum nostrum?
+Commodi ad quasi nulla aut, similique reprehenderit nobis adipisci quod fugit soluta odit ullam, quo tempore aperiam odio id iste aliquid quia optio eveniet labore? Dolorem sint sapiente eaque id!
+Consequuntur accusamus voluptas culpa hic ipsum asperiores, veniam aperiam unde mollitia facilis dolores eos enim accusantium voluptates libero tempore cumque quasi officiis ipsa amet illum consectetur tempora quidem? Optio, culpa.
+Velit deleniti sed magni earum dicta quam quos obcaecati accusantium quae quod nobis nulla, non esse minima voluptatibus adipisci veritatis iure voluptatem laudantium nemo ea totam? Nemo vel ducimus hic!
+Dolores doloremque quibusdam dignissimos perferendis deleniti eaque molestiae eligendi et commodi facilis sunt voluptates ad recusandae inventore illum animi, doloribus laudantium delectus iste quia provident. Vitae labore consectetur provident sequi?
+Accusamus soluta fuga, ducimus ipsa quae autem sapiente. Voluptas hic delectus nostrum totam at quae dolore illo odio maxime. Dolor, fuga? Obcaecati qui, provident magni asperiores aliquam quam aut at.
+Illo cupiditate vitae dolorum soluta dolorem impedit nam. Sequi porro, dolores quibusdam repudiandae error deleniti nesciunt delectus exercitationem quas illo aperiam eveniet similique impedit magnam incidunt vel repellendus odio iusto.
+Temporibus, perferendis? Voluptates laudantium recusandae ea doloremque! Recusandae quam commodi amet, sit odit repudiandae blanditiis dicta eaque non quae libero ipsum illo? Atque quidem, labore sequi alias asperiores vitae exercitationem?
+Corporis commodi, quasi maxime nisi doloribus delectus magni, repudiandae vel corrupti, omnis sunt tempore consectetur ipsa esse quos fugit aliquid dignissimos culpa eius. Eum exercitationem dicta error aperiam accusamus deserunt.
+Voluptate asperiores obcaecati temporibus cumque voluptatem, enim voluptatum, error sint inventore eum similique officiis quod praesentium labore a! Praesentium amet modi cumque cupiditate cum a quas vitae minus unde quos.
+Commodi repellendus ad rerum perspiciatis, rem illum facilis id tempore! Eius vero vitae iusto? Nisi recusandae ullam sunt commodi minima, voluptas vitae. Adipisci veritatis commodi modi, non iure nihil. Temporibus!
+Sint eius eveniet recusandae quis ad tempore minima consectetur hic, illum excepturi beatae exercitationem a dicta distinctio quaerat nihil quas soluta quasi cumque modi libero optio laborum at? Incidunt, quae.
+Libero dolores provident fugit, et sit earum quod accusantium in modi enim iusto, minima ex reprehenderit quasi consectetur voluptatibus quae amet ut autem quis at harum saepe. Minus, molestiae quam!
+Similique exercitationem eligendi et expedita consequuntur tenetur maiores quasi itaque at veniam doloremque illo eum dolores doloribus, corrupti, aliquam ullam suscipit alias veritatis vero! Molestiae ipsa eveniet quo ipsum repellat.
+Itaque minima rerum modi ipsa culpa qui cupiditate sunt error, totam temporibus fuga placeat libero cumque molestiae optio hic dolorem fugiat quod repudiandae. Id vitae minima at quae accusamus assumenda.
+Reprehenderit unde magni repellendus ipsa ea, illum impedit saepe? Quod error ratione natus, molestias omnis accusantium laudantium saepe minima suscipit, impedit repellendus obcaecati. Accusamus asperiores magnam assumenda dolor distinctio? Reprehenderit.
+Libero, sint aperiam atque delectus labore ipsum est cupiditate nulla earum inventore iusto ea deserunt necessitatibus laboriosam impedit corporis distinctio maxime similique possimus molestias dolor aliquid aliquam. Temporibus, tenetur architecto?
+Animi dolorum earum mollitia, commodi nemo tempore, distinctio vitae dolorem accusamus reiciendis aliquam explicabo accusantium ab facilis beatae labore ea voluptatem porro numquam sint, tempora incidunt necessitatibus amet similique! Dolor?
+Asperiores qui magni nesciunt officiis consequuntur nemo? Minus accusantium assumenda explicabo nesciunt odit perspiciatis eius ipsam dolores nisi nulla? Reprehenderit temporibus doloremque atque illo a deserunt magnam explicabo sequi sed?
+Nostrum, reiciendis nisi quia magni at aspernatur illum ea quo ab cum distinctio quam praesentium sint obcaecati inventore consectetur omnis adipisci voluptatibus libero unde fugit rem! Quasi nulla molestias reprehenderit.
+Beatae in maiores et temporibus cum eum esse eaque nemo at vitae inventore ab ut veritatis recusandae non accusantium, vel repudiandae ratione fugiat voluptatibus. Totam optio maxime dolor facere exercitationem?</p>
+<div><a id="seemore-link" href="#about" onclick="readmore()">Read More</a></div>
 </div>
