--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,43 +7,51 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body class="background-lightgrey">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">StudentApp</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow background-darkgrey">
+            <div class="navbar-container">
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Student App</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-1" style="justify-content:flex-end;">
+						<li class="nav-item">
+								<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+						</li>
+						<li class="nav-item dropdownButton" id="StudentNavLink">
+							<a class="nav-link text-white" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
+                            <div class="dropdown-content shadow">
+                                <a class="nav-link text-black" asp-area="" asp-controller="Students" asp-action="Create">Add a new Student</a>
+                                <a class="nav-link text-black" asp-area="" asp-controller="Students" asp-action="Index">View all students</a>
+                            </div>
+						</li>
+						<li class="nav-item dropdownButton" id="CourseNavLink">
+							<a class="nav-link text-white" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a>
+							<div class="dropdown-content shadow">
+								<a class="nav-link text-black" asp-area="" asp-controller="Courses" asp-action="Create">Add a new Course</a>
+								<a class="nav-link text-black" asp-area="" asp-controller="Courses" asp-action="Index">View all Courses</a>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+						</li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="main-container bg-white shadow fill-height">
+        <main role="main" class="p-5">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-white background-darkgrey">
         <div class="container">
-            &copy; 2021 - StudentApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - StudentApp - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-white text-underline">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
